--- a/docs/guides/qiskit-addons-cutting-wires.ipynb
+++ b/docs/guides/qiskit-addons-cutting-wires.ipynb
@@ -128,7 +128,7 @@
    "metadata": {},
    "source": [
     "<Admonition type=\"info\" title=\"Note about expanding observables\">\n",
-    "    When a circuit is expanded through one or more wire cuts, the observable needs to be updated to account for the extra qubits that are introduced. The `qiskit-addon-cutting` package has a convenience function [`expand_observables()`](/api/qiskit-addon-cutting/qiskit-addon-cutting#expand_observables) which takes `PauliList`s and the original and expanded circuits as arguments and returns a new `PauliList`.\n",
+    "    When a circuit is expanded through one or more wire cuts, the observable needs to be updated to account for the extra qubits that are introduced. The `qiskit-addon-cutting` package has a convenience function [`expand_observables()`](/api/qiskit-addon-cutting/qiskit-addon-cutting#expand_observables), which takes `PauliList`s and the original and expanded circuits as arguments, and returns a new `PauliList`.\n",
     "\n",
     "    This returned `PauliList` will not contain any information about the original observable's coefficients, but these can be ignored until reconstruction of the final expectation value.\n",
     "</Admonition>"
