--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -90,12 +90,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit.circuit import Parameter, QuantumCircuit, ClassicalRegister, QuantumRegister\n",
+    "from qiskit.circuit import (\n",
+    "    Parameter,\n",
+    "    QuantumCircuit,\n",
+    "    ClassicalRegister,\n",
+    "    QuantumRegister,\n",
+    ")\n",
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "from qiskit.quantum_info import SparsePauliOp\n",
     "from qiskit.primitives.containers import BitArray\n",
     "\n",
-    "from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2 as Estimator, SamplerV2 as Sampler\n",
+    "from qiskit_ibm_runtime import (\n",
+    "    QiskitRuntimeService,\n",
+    "    EstimatorV2 as Estimator,\n",
+    "    SamplerV2 as Sampler,\n",
+    ")\n",
     "\n",
     "import numpy as np\n",
     "\n",
@@ -371,14 +380,20 @@
     }
    ],
    "source": [
-    "print(f\"The result of the submitted job had {len(result)} PUB and has a value:\\n {result}\\n\")\n",
-    "print(f\"The associated PubResult of this job has the following DataBins:\\n {result[0].data}\\n\")\n",
+    "print(\n",
+    "    f\"The result of the submitted job had {len(result)} PUB and has a value:\\n {result}\\n\"\n",
+    ")\n",
+    "print(\n",
+    "    f\"The associated PubResult of this job has the following DataBins:\\n {result[0].data}\\n\"\n",
+    ")\n",
     "print(f\"And this DataBin has attributes: {result[0].data.keys()}\")\n",
     "print(\n",
-    "  \"Recall that this shape is due to our array of parameter binding sets having shape (100,), combined with \\n\\\n",
+    "    \"Recall that this shape is due to our array of parameter binding sets having shape (100,), combined with \\n\\\n",
     "  our array of observables having shape (3, 1), where 2 is the number of parameters in the circuit.\\n\"\n",
     ")\n",
-    "print(f\"The expectation values measured from this PUB are: \\n{result[0].data.evs}\")"
+    "print(\n",
+    "    f\"The expectation values measured from this PUB are: \\n{result[0].data.evs}\"\n",
+    ")"
    ]
   },
   {
@@ -410,7 +425,7 @@
    "source": [
     "### Sampler output\n",
     "\n",
-    "When a Sampler job is completed successfully, the returned [`PrimitiveResult`](../api/qiskit/qiskit.primitives.PrimitiveResult) object contains a list of [`SamplerPubResult`](../api/qiskit/qiskit.primitives.SamplerPubResult)s, one per PUB. The databins of these `SamplerPubResult`s are dict-like objects that contain one `BitArray`s per `ClassicalRegister` in the circuit. \n",
+    "When a Sampler job is completed successfully, the returned [`PrimitiveResult`](../api/qiskit/qiskit.primitives.PrimitiveResult) object contains a list of [`SamplerPubResult`](../api/qiskit/qiskit.primitives.SamplerPubResult)s, one per PUB. The databins of these `SamplerPubResult`s are dict-like objects that contain one `BitArray`s per `ClassicalRegister` in the circuit.\n",
     "\n",
     "The `get_counts` method of `BitArray` returns a dictionary mapping the sampled measurement outcomes to their counts. For example, for a circuit with measurement instructions added by the [`QuantumCircuit.measure_all()`](../api/qiskit/qiskit.circuit.QuantumCircuit#measure_all), the counts can be access as follows:"
    ]
@@ -418,6 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "40f4fa9d-9464-4063-b8e9-a1b57c42a579",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,6 +469,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "61c70ff7-7814-4535-9268-ac163c10121c",
    "metadata": {},
    "source": [
     "When a circuit contains more than one classical registers, the results are stored in different `BitArray`s. The following example modifies the previous snippet by splitting the classical register into two distinct registers:"
@@ -461,12 +478,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7c21a74d-26b0-4494-8d5f-92bd5c0cbdc2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# generate a ten-qubit GHZ circuit with two classical registers\n",
     "circuit = QuantumCircuit(\n",
-    "    qreg := QuantumRegister(10), \n",
+    "    qreg := QuantumRegister(10),\n",
     "    alpha := ClassicalRegister(1, \"alpha\"),\n",
     "    beta := ClassicalRegister(9, \"beta\"),\n",
     ")\n",
@@ -497,6 +515,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ed24d1ba-e2ab-4d02-b218-c61d9336080e",
    "metadata": {},
    "source": [
     "#### Leveraging `BitArray`s for performant post-processing\n",
@@ -509,6 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7682a2d3-be68-4822-a59f-7a5e8e55c11a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,6 +547,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "998bfcca-835e-42f9-9919-6474058e8970",
    "metadata": {},
    "source": [
     "`BitArray` offers a wide range of built-in methods to perform some of the operations commonly performed during post-processing:"
@@ -535,18 +556,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6f51c14f-434a-4c7e-8fc7-6acbcde68959",
    "metadata": {},
    "outputs": [],
    "source": [
     "# get a slice of `beta` to retrieve the first three bits\n",
     "beta_sl_bits = data.beta.slice_bits([0, 1, 2])\n",
-    "print(f\"The shape of `beta` after bit-wise slicing is {beta_sl_bits.array.shape}.\")\n",
+    "print(\n",
+    "    f\"The shape of `beta` after bit-wise slicing is {beta_sl_bits.array.shape}.\"\n",
+    ")\n",
     "print(f\"The bytes in `beta` after bit-wise slicing:\\n{beta_sl_bits.array}\\n\")\n",
     "\n",
     "# get a slice of `beta` to retrieve the bytes of the first five shots\n",
     "beta_sl_shots = data.beta.slice_shots([0, 1, 2, 3, 4])\n",
-    "print(f\"The shape of `beta` after shot-wise slicing is {beta_sl_shots.array.shape}.\")\n",
-    "print(f\"The bytes in `beta` after shot-wise slicing:\\n{beta_sl_shots.array}\\n\")\n",
+    "print(\n",
+    "    f\"The shape of `beta` after shot-wise slicing is {beta_sl_shots.array.shape}.\"\n",
+    ")\n",
+    "print(\n",
+    "    f\"The bytes in `beta` after shot-wise slicing:\\n{beta_sl_shots.array}\\n\"\n",
+    ")\n",
     "\n",
     "# calculate the expectation value of diagonal operators on `beta`\n",
     "ops = [SparsePauliOp(\"ZZZZZZZZZ\"), SparsePauliOp(\"IIIIIIIIZ\")]\n",
