--- a/docs/guides/qiskit-code-assistant-openai-api.mdx
+++ b/docs/guides/qiskit-code-assistant-openai-api.mdx
@@ -10,7 +10,7 @@ description: Learn how to integrate the Qiskit Code Assistant with other applica
 
 # Qiskit Code Assistant - OpenAI API Compatibility
 
-The Qiskit Code Assistant offers compatibility with a subset of the OpenAI API specification, espeficially with the [completions API endpoints](https://platform.openai.com/docs/api-reference/completions). The goal of this compatibility is to allow third party packages to connect to the Qiskit Code Assistant seamlessly by using well known AI-related libraries and methods such as [openai](https://github.com/openai/openai-python), [litellm](https://github.com/BerriAI/litellm), or others.
+The Qiskit Code Assistant offers compatibility with a subset of the OpenAI API specification, specifically with the [completions API endpoints](https://platform.openai.com/docs/api-reference/completions). The goal of this compatibility is to allow third party packages to connect to the Qiskit Code Assistant seamlessly by using well known AI-related libraries and methods such as [openai](https://github.com/openai/openai-python), [litellm](https://github.com/BerriAI/litellm), or others.
 
 ## OpenAI API endpoints supported
 
