--- a/docs/guides/qiskit-addons-cutting-gates.ipynb
+++ b/docs/guides/qiskit-addons-cutting-gates.ipynb
@@ -439,7 +439,7 @@
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "    - Read the [Get started with circuit cutting using wire cuts](/guides/qiskit-addons-cutting-wires) guide.\n",
-    "    - Read the arXiv paper on [circuit knitting with classical communication.](https://arxiv.org/abs/2205.00016)\n",
+    "    - Read the arXiv paper on [circuit knitting with classical communication.](https://ieeexplore.ieee.org/document/10236453)\n",
     "</Admonition>"
    ]
   }
@@ -447,7 +447,7 @@
  "metadata": {
   "description": "Two worked examples of gate cutting using the circuit cutting addon to get started with the package",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "qiskit-documentation-3.12",
    "language": "python",
    "name": "python3"
   },
@@ -461,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.12.8"
   },
   "title": "Get started with gate cutting"
  },
