--- a/docs/guides/qiskit-addons-cutting-gates.ipynb
+++ b/docs/guides/qiskit-addons-cutting-gates.ipynb
@@ -447,7 +447,7 @@
  "metadata": {
   "description": "Two worked examples of gate cutting using the circuit cutting addon to get started with the package",
   "kernelspec": {
-   "display_name": "qiskit-documentation-3.12",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -461,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3"
   },
   "title": "Get started with gate cutting"
  },
