--- a/docs/migration-guides/qiskit-runtime-from-ibmq-provider.mdx
+++ b/docs/migration-guides/qiskit-runtime-from-ibmq-provider.mdx
@@ -5,6 +5,17 @@ description: How to migrate `backend.run()` from qiskit-ibmq-provider to Qiskit 
 
 # Migrate from `qiskit_ibmq_provider`
 
+<LegacyContent>
+<Admonition type="note">
+This documentation is relevant to IBM Quantum&reg; Platform Classic. If you need the newer version, go to the new [IBM Quantum Platform documentation.]( https://quantum.cloud.ibm.com/docs/migration-guides/qiskit-runtime-from-ibmq-provider)
+</Admonition>
+</LegacyContent>
+<CloudContent>
+<Admonition type="note">
+This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/migration-guides/qiskit-runtime-from-ibmq-provider)
+</Admonition>
+</CloudContent>
+
 This topic describes how to migrate code from the legacy IBMQ provider
 `qiskit-ibmq-provider` package to use Qiskit Runtime
 `qiskit-ibm-runtime`.
@@ -41,13 +52,13 @@ The import path has changed as follows:
 
 <Tabs>
   <TabItem value="updated" label="Runtime primitives">
-``` python
+```python
 from qiskit_ibm_runtime import QiskitRuntimeService
 ```
   </TabItem>
 
   <TabItem value="legacy" label="backend.run">
-``` python
+```python
 from qiskit import IBMQ
 ```
   </TabItem>
@@ -59,20 +70,28 @@ Use the updated code to work save accounts.
 
 <Tabs>
   <TabItem value="updated" label="Runtime primitives">
+<LegacyContent>
 The new syntax accepts credentials for
 Qiskit Runtime on IBM Cloud&reg; or IBM Quantum Platform. For more
 information on retrieving account credentials, see [Select and set up an IBM Quantum channel](/guides/setup-channel).
 
-``` python
+```python
 # IBM Quantum channel; set to default
 
 QiskitRuntimeService.save_account(channel="ibm_quantum", token="<IQP_TOKEN>", overwrite=True, set_as_default=True)
 ```
+</LegacyContent>
+<CloudContent>
+For information on retrieving account credentials, see [Set up your IBM Cloud account](/guides/cloud-setup).
+```python
+QiskitRuntimeService.save_account(channel="ibm_cloud", token="<API_TOKEN>", overwrite=True, set_as_default=True)
+```
+</CloudContent>
 
 Additionally, you can now name your saved credentials and load the credentials by name.
 
-
-``` python
+<LegacyContent>
+```python
 # Save different accounts for open and premium access
 
 QiskitRuntimeService.save_account(channel="ibm_quantum", token="<IQX_TOKEN>", instance="h1/g1/p1", name="premium")
@@ -82,16 +101,29 @@ QiskitRuntimeService.save_account(channel="ibm_quantum", token="<IQX_TOKEN>", in
 
 service = QiskitRuntimeService(name="open")
 ```
+</LegacyContent>
+<CloudContent>
+```python
+# Save different accounts for open and premium access
+
+QiskitRuntimeService.save_account(channel="ibm_cloud", token="<API_TOKEN>", instance="<CRN for premium>", name="premium")
+QiskitRuntimeService.save_account(channel="ibm_cloud", token="<API_TOKEN>", instance="<CRN for open>", name="open")
+
+# Load the "open" credentials
+
+service = QiskitRuntimeService(name="open")
+```
+</CloudContent>
   </TabItem>
 
   <TabItem value="legacy" label="backend.run">
-``` python
+```python
 IBMQ.save_account("<IQX_TOKEN>", overwrite=True)
 ```
   </TabItem>
 </Tabs>
 
-
+<LegacyContent>
 ## Load accounts
 
 Use the updated code to load accounts.
@@ -102,7 +134,7 @@ The `channel` input parameter is
 optional. If multiple accounts have been saved in one device and no
 `channel` is provided, the default is `"ibm_cloud"`.
 
-``` python
+```python
 # To access saved credentials for the IBM cloud channel
 service = QiskitRuntimeService(channel="ibm_cloud")
 
@@ -112,15 +144,15 @@ service = QiskitRuntimeService(channel="ibm_quantum")
   </TabItem>
 
   <TabItem value="legacy" label="backend.run">
-``` python
+```python
 IBMQ.load_account()
 ```
   </TabItem>
 </Tabs>
-
+</LegacyContent>
 
 ## Instance selection (get a provider)
-
+<LegacyContent>
 Use the updated code to select a hub, group, and project.
 
 <Tabs>
@@ -130,26 +162,37 @@ The new syntax combines the functionality from `load_account()` and
 the `hub`, `group`, and `project` are specified through the new
 `instance` keyword.
 
-``` python
+```python
 # To access saved credentials for the IBM quantum channel and select an instance
 service = QiskitRuntimeService(channel="ibm_quantum", instance="my_hub/my_group/my_project")
 ```
   </TabItem>
 
   <TabItem value="legacy" label="backend.run">
-``` python
+```python
 provider = IBMQ.get_provider(project="my_project", group="my_group", hub="my_hub")
 ```
   </TabItem>
 </Tabs>
+</LegacyContent>
+<CloudContent>
+Use the updated code to select an instance.
 
+The new syntax combines the functionality from `load_account()` and
+`get_provider()` in one statement. Use the `instance` keyword to specify your Cloud Resource Name (CRN).
+
+```python
+# To access saved credentials for the IBM quantum channel and select an instance
+service = QiskitRuntimeService(channel="ibm_cloud", instance="<CRN>")
+```
+</CloudContent>
 ## Get a backend
 
 Use the updated code to specify a backend.
 
 <Tabs>
   <TabItem value="updated" label="Runtime primitives">
-``` python
+```python
 # You can specify the instance in service.backend() instead of initializing a new service
 backend = service.backend("ibm_backend", instance="h1/g1/p1")
 ```
@@ -176,7 +219,7 @@ backend = FakeManilaV2()
   </TabItem>
 
   <TabItem value="legacy" label="backend.run">
-``` python
+```python
 provider = IBMQ.get_provider(hub="h1", group="g1", project="p1")
 backend = provider.get_backend("ibm_backend")
 ```
