--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -183,10 +183,10 @@
    "metadata": {},
    "source": [
     "<LegacyContent>\n",
-    "At this point, you can get your backend with `QiskitRuntimeService` and add your existing program with the following code. The following code requires that you have already [saved your credentials](/guides/setup-channel#iqp).",
+    "At this point, you can get your backend with `QiskitRuntimeService` and add your existing program with the following code. The following code requires that you have already [saved your credentials](/guides/setup-channel#iqp).\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
-    "At this point, you can get your backend with `QiskitRuntimeService` and add your existing program with the following code. The following code requires that you have already [saved your credentials](/guides/cloud-setup).",
+    "At this point, you can get your backend with `QiskitRuntimeService` and add your existing program with the following code. The following code requires that you have already [saved your credentials](/guides/cloud-setup).\n",
     "</CloudContent>"
    ]
   },
@@ -260,10 +260,10 @@
     "Use `qiskit-ibm-catalog` to authenticate to `QiskitServerless` with your API token, which you can find in your [IBM Quantum account](https://quantum.ibm.com/account), and upload the program.\n",
     "\n",
     "<LegacyContent>\n",
-    "You can use `save_account()` to save your credentials (See the \"Authenticate to the service\" step in the [Set up to use IBM Quantum Platform](./setup-channel#set-up-to-use-ibm-quantum-platform) section). Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`](/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account).",
+    "You can use `save_account()` to save your credentials (See the \"Authenticate to the service\" step in the [Set up to use IBM Quantum Platform](./setup-channel#set-up-to-use-ibm-quantum-platform) section). Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`](/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account).\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
-    "You can use `save_account()` to save your credentials (See the [Set up to use IBM Cloud](/guides/cloud-setup#cloud-save) section). Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`](/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account).",
+    "You can use `save_account()` to save your credentials (See the [Set up to use IBM Cloud](/guides/cloud-setup#cloud-save) section). Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`](/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account).\n",
     "</CloudContent>"
    ]
   },
